--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moriya Hut: The best (only) pizzeria in Gensokyo!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <div class="main">
@@ -14,13 +14,13 @@
         </div>
         <div class="intro">
             <div class="dialogue">
-                <img src="suwakomoriyahut.png" style="width: 500px; height: 500px; margin-right: -150px;">
+                <img src="assets/suwakomoriyahut.png" style="width: 500px; height: 500px; margin-right: -150px;">
                 <p style="color: blue; margin-top: 55px; margin-left: 75px;">What is Moriya Hut, you say?</p>
                 <p style="color: blue; margin-top: 200px; margin-left: -105px;">Moriya Hut is the <del>only</del> best pizzeria in Gensokyo!</p>
                 <p style="color: blue; margin-top: 350px; margin-left: -295px; margin-right: 150px;">And the best security!</p>
             </div>
             <div class="dialogue">
-                <img src="spiemoriyahut.png" style="float: right; margin-left: 350px;">
+                <img src="assets/spiemoriyahut.png" style="float: right; margin-left: 350px;">
                 <p style="color: purple; margin-left: -565px; margin-top: 145px;">We're glad you asked!</p>
                 <p style="color: purple; margin-left: -475px; margin-top: 285px;">Only the best foods at a reasonable price.<br>No corporate greed whatsoever.</p>
                 <p style="color: purple; margin-left: -235px; margin-top: 450px;">THAT'S ME!</p>
@@ -31,47 +31,47 @@
         <div class="reviews">
             <h2 style="text-align: center; color: white;">The Totally Real Review Section™</h2>
             <div class="review">
-                <img src="sanae.png" class="pfp">
+                <img src="assets/sanae.png" class="pfp">
                 <h4>Sanae Kochiya<br>★★★★★</h4>
                 <p>"Yum! Bringing pizza to Gensokyo was a great idea! Oh, how I've missed this taste..."</p>
             </div>
             <div class="review">
-                <img src="reimu.png" class="pfp">
+                <img src="assets/reimu.png" class="pfp">
                 <h4>Reimu Hakurei<br>★★★☆☆</h4>
                 <p>"The proprietor provides me with free meals, so I suppose I'll accept this."</p>
             </div>
             <div class="review">
-                <img src="kanako.png" class="pfp">
+                <img src="assets/kanako.png" class="pfp">
                 <h4>Kanako Yasaka<br>★★★★★★</h4>
                 <p>"Tip at least 50% for a blessing from yours truly."</p>
             </div>
             <div class="review">
-                <img src="joon.png" class="pfp">
+                <img src="assets/joon.png" class="pfp">
                 <h4>Joon Yorigami<br>★☆☆☆☆</h4>
                 <p style="margin-top: -40px;">"Whenever I try to enter the premises, a purple man with a knife attacks me! What the hell is this?!" <a href="what.png">&lt;image attached&gt;</a></p>
             </div>
             <div class="review">
-                <img src="villager.png" class="pfp">
+                <img src="assets/villager.png" class="pfp">
                 <h4>Hungry Villager<br>★★★★☆</h4>
                 <p>"The food was wonderful, but why was there a frog in the building? Seems rather unsanitary."</p>
             </div>
             <div class="review">
-                <img src="eiki.png" class="pfp">
+                <img src="assets/eiki.png" class="pfp">
                 <h4>Eiki Shiki<br>★☆☆☆☆</h4>
                 <p>"This reeks of faith laundering..."</p>
             </div>
             <div class="review">
-                <img src="kiryu.png" class="pfp">
+                <img src="assets/kiryu.png" class="pfp">
                 <h4>Kiryu Kazuma<br>★★★★★</h4>
                 <p>"Dame da-wow! This is baka mi-good!"</p>
             </div>
             <div class="review">
-                <img src="koishi.png" class="pfp">
+                <img src="assets/koishi.png" class="pfp">
                 <h4>Koishi Komeiji<br>★★☆☆☆</h4>
                 <p>"asdfoiadfsoinoiasgnhoir"</p>
             </div>
             <div class="review">
-                <img src="shion.png" class="pfp">
+                <img src="assets/shion.png" class="pfp">
                 <h4>Shion Yorigami<br>★★★★★</h4>
                 <p>"I get paid a decent wage here, unlike some other places. Also, employees get to eat for free."</p>
             </div>
