--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             </div>
         </div>
         <h2 style="text-align: center; color: red;">So, where can I visit?</h2>
-        <p style="text-align: center;">Unfortunately, as of current, Moriya Hut is only on the Youkai Mountain. However, new locations will be coming soon, courtesy of Murasaki Construction!<br><br>Expect locations all over Gensokyo and beyond, such as in the Human Village, Forest of Magic, Hell, Makai, and even in the Netherworld! Everywhere except the Moon. Fuck you, Watatsuki.</p>
+        <p style="text-align: center;">Unfortunately, as of current, Moriya Hut is only on the Youkai Mountain. However, new locations will be coming soon, courtesy of Murasaki Construction!<br><br>Expect locations all over Gensokyo and beyond, such as in the Human Village, Forest of Magic, Hell, Makai, and even in the Netherworld! Everywhere except the Moon. Fuck you, Watatsukis.</p>
     </div>
+    <img src="assets/murasakiconstruction.png" style="display: block; margin-left: auto; margin-right: auto; width: 240px; height: 135px;">
 </body>
 </html>
