--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
                 <h4>Shion Yorigami<br>★★★★★</h4>
                 <p>"I get paid a decent wage here, unlike some other places. Also, employees get to eat for free."</p>
             </div>
+            <div class="review">
+                <img src="assets/blake.png" class="pfp">
+                <h4>Blake Izayoi<br>★★★★☆</h4>
+                <p>"Spie threatened me with another fight if I didn't order from here. At least it was good pizza."</p>
+            </div>
         </div>
         <h2 style="text-align: center; color: red;">So, where can I visit?</h2>
         <p style="text-align: center;">Unfortunately, as of current, Moriya Hut is only on the Youkai Mountain. However, new locations will be coming soon, courtesy of Murasaki Construction!<br><br>Expect locations all over Gensokyo and beyond, such as in the Human Village, Forest of Magic, Hell, Makai, and even in the Netherworld! Everywhere except the Moon. Fuck you, Watatsukis.</p>
